syntax = "proto3";

package maarpc;

option csharp_namespace = "MaaFramework.Binding.Grpc.Interop";

message Point {
  optional int32 x = 1;
  optional int32 y = 2;
}
message Size {
  optional int32 width = 1;
  optional int32 height = 2;
}
message Rect {
  optional Point xy = 1;
  optional Size wh = 2;
}
message Callback {
  optional string msg = 1;
  optional string detail = 2;
}

message ClickParam { optional Point point = 1; }
message SwipeParam {
  optional Point from = 1;
  optional Point to = 2;
  optional int32 duration = 3;
}
message KeyParam { optional int32 key = 1; }
message TouchParam {
  optional int32 contact = 1;
  optional Point pos = 2;
  optional int32 pressure = 3;
}

message EmptyRequest { optional bool unused = 1; }
message IdRequest { optional string id = 1; }
message HandleRequest { optional string handle = 1; }
message BufferRequest { optional bytes buffer = 1; }
message StringRequest { optional string str = 1; }
message HandleBufferRequest {
  optional string handle = 1;
  optional bytes buffer = 2;
}
message HandleHandleRequest {
  optional string handle = 1;
  optional string another_handle = 2;
}
message HandleStringRequest {
  optional string handle = 1;
  optional string str = 2;
}
message HandleIdRequest {
  optional string handle = 1;
  optional string id = 2;
}
message HandleIIdRequest {
  optional string handle = 1;
  optional uint64 id = 2;
}
message KeyValueRequest {
  optional string key = 1;
  optional string value = 2;
}

message EmptyResponse { optional bool void = 1; }
message IdResponse { optional string id = 1; }
message IIdResponse { optional uint64 id = 1; }
message SizeResponse { optional uint64 size = 1; }
message BoolResponse { optional bool bool = 1; }
message StringResponse { optional string str = 1; }
message HandleResponse { optional string handle = 1; }
message BufferResponse { optional bytes buf = 1; }
message StatusResponse { optional int32 status = 1; }
